k8s/NetflixFrontend/deployment-netflix-frontend.yaml
# k8s/deployment-demo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
  labels:
    app: netflix-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
        labels:
          app: netflix-frontend
    spec:
      containers:
      - name: server
        image: bene1310/netflix-frontend:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  selector:
    app: netflix-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-external
spec:
  type: NodePort
  selector:
    app: netflix-frontend
  ports:
    - port: 3000
      targetPort: 30000
      nodePort: 30001  # Optional field, if not specified, the control plane will allocate a port from a range (default: 30000-32767)
