k8s/NetflixFrontend/ingress.yaml
# k8s/ingress-demo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: netflix-alb-k8s-61161915.eu-west-1.elb.amazonaws.com
    http:
      paths:
      - path: /status
        pathType: Exact
        backend:
          service:
            name: netflix-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-service
            port:
              number: 3000
